--- a/Frontend/Pages/html/about.html
+++ b/Frontend/Pages/html/about.html
@@ -43,7 +43,7 @@
             English
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">German</a></li>
+            <li><a class="dropdown-item" href="#">Germany</a></li>
             <li><a class="dropdown-item" href="#">French</a></li>
           </ul>
         </div>
